# Pos2

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak.20251015-062908  resources.qrc
resources/certs/: server.crt
resources/db/: localdb.sqbpro  localdb.sqlite
src/app/: main.cpp
src/core/: db.cpp  db.h  logging.h  thememanager.cpp  thememanager.h
src/net/: .settingsbridge.cpp.swp  apiclient.cpp  apiclient.h  authbridge.cpp  authbridge.h  loaderbridge.cpp  loaderbridge.h  settingsbridge.cpp  settingsbridge.h
src/qml/: HeaderBar.qml  Login.qml  Main.qml  Menu.qml  Settings.qml  Splash.qml  Theme.qml
